Netdll_EdingCnc - v4.3.52/Netdll_EdingCnc/cncapi v4.3.51/cncapi.h


void EXP2DF __stdcall CncGetAPIVersion(char *version);
CNC_RC EXP2DF __stdcall CncGetServerVersion(char *version);
CNC_RC EXP2DF __stdcall CncConnectServer(char *iniFileName);
CNC_RC EXP2DF __stdcall CncDisConnectServer(void);
char EXP2DF * __stdcall CncGetSetupPassword(void);
CNC_RC EXP2DF __stdcall CncSetSetupPassword(char *newPassword);
CNC_SYSTEM_CONFIG      EXP2DF * __stdcall CncGetSystemConfig(void);
CNC_INTERPRETER_CONFIG EXP2DF * __stdcall CncGetInterpreterConfig(void);
CNC_SAFETY_CONFIG      EXP2DF * __stdcall CncGetSafetyConfig(void);
CNC_TRAFFIC_LIGHT_CFG  EXP2DF * __stdcall CncGetTrafficLightConfig(void);
CNC_PROBING_CFG        EXP2DF * __stdcall CncGetProbingConfig(void);
CNC_IO_CONFIG          EXP2DF * __stdcall CncGetIOConfig(void);
CNC_I2CGPIO_CARD_CONFIG EXP2DF * __stdcall CncGetGPIOConfig(void);
CNC_JOINT_CFG          EXP2DF * __stdcall CncGetJointConfig(int joint);
CNC_SPINDLE_CONFIG     EXP2DF * __stdcall CncGetSpindleConfig(int spindle);
CNC_FEEDSPEED_CFG      EXP2DF * __stdcall CncGetFeedSpeedConfig(void);
CNC_HANDWHEEL_CFG      EXP2DF * __stdcall CncGetHandwheelConfig(void);
CNC_TRAJECTORY_CFG     EXP2DF * __stdcall CncGetTrajectoryConfig(void);
CNC_KIN_CFG            EXP2DF * __stdcall CncGetKinConfig(void);
CNC_UI_CFG             EXP2DF * __stdcall CncGetUIConfig(void);
CNC_CAMERA_CONFIG      EXP2DF * __stdcall CncGetCameraConfig(void);
CNC_THC_CFG            EXP2DF * __stdcall CncGetTHCConfig(void);
CNC_SERVICE_CFG        EXP2DF * __stdcall CncGetServiceConfig(void);
CNC_3DPRINTING_CONFIG  EXP2DF * __stdcall CncGet3DPrintConfig(void);
CNC_UIO_CONFIG         EXP2DF * __stdcall CncGetUIOConfig(void);
CNC_VACUUMBED_CONFIG   EXP2DF * __stdcall CncGetVacuumConfig(void);
CNC_IO_PORT_STS        EXP2DF * __stdcall CncGetIOStatus(CNC_IO_ID ioID);
int EXP2DF __stdcall CncGetInput(CNC_IO_ID id);
int EXP2DF __stdcall CncGetInputRaw(CNC_IO_ID id);
int EXP2DF __stdcall CncGetGPIOInput(int gpioCardIndex, CNC_GPIO_ID ioId);
CNC_RC EXP2DF __stdcall CncSetOutput(CNC_IO_ID id, int value);
CNC_RC EXP2DF __stdcall CncSetOutputRaw(CNC_IO_ID id, int value);
CNC_RC EXP2DF __stdcall CncSetGPIOOutput(int gpioCardIndex, CNC_GPIO_ID ioId, int value);
CNC_RC EXP2DF __stdcall CncCheckStartConditionOK(int generateMessage, int ignoreHoming, int *result);
CNC_RC EXP2DF __stdcall CncSetSpindleOutput(int onOff, int direction, double absSpeed);
CNC_RC EXP2DF __stdcall CncLogFifoGet(CNC_LOG_MESSAGE *data);
CNC_RC EXP2DF __stdcall CncPosFifoGet(CNC_POS_FIFO_DATA *data);
CNC_RC EXP2DF __stdcall CncPosFifoGet2(CNC_POS_FIFO_DATA *data, int *isLast);
CNC_RC EXP2DF __stdcall CncGraphFifoGet(CNC_GRAPH_FIFO_DATA *data);
CNC_RC EXP2DF __stdcall CncReset(void);
CNC_RC EXP2DF __stdcall CncReset2(unsigned int resetFlags);
CNC_RC EXP2DF __stdcall CncRunSingleLine(const char *text);
typedef int (*CNC_KEEP_UI_ALIVE_FUNCTION)(void * pParameter);
int    EXP2DF __stdcall CncWaitSingleLine(CNC_KEEP_UI_ALIVE_FUNCTION pKeepAlive, void *pKeepAliveParameter);
CNC_RC EXP2DF __stdcall CncLoadJobW(const wchar_t *fileName); 
CNC_RC EXP2DF __stdcall CncLoadJobA(const char *fileName);    
CNC_RC EXP2DF __stdcall CncRunOrResumeJob(void);
CNC_RC EXP2DF __stdcall CncStartRenderGraph(int outLines, int contour);
CNC_RC EXP2DF __stdcall CncStartRenderSearch(int outLines, int contour, int lineNr, int toolNr, int arrayX, int arrayY);
CNC_RC EXP2DF __stdcall CncRewindJob(void);
CNC_RC EXP2DF __stdcall CncAbortJob(void);
CNC_RC EXP2DF __stdcall CncSetJobArrayParameters(CNC_CMD_ARRAY_DATA *runJobData);
CNC_RC EXP2DF __stdcall CncGetJobArrayParameters(CNC_CMD_ARRAY_DATA *runJobData);
CNC_VECTOR EXP2DF __stdcall CncGetJobMaterialSize(void);
CNC_RC EXP2DF __stdcall CncGetJobFiducual(int n, CNC_FIDUCIAL_DATA *fiducial);
CNC_RC EXP2DF __stdcall CncEnableBlockDelete(int enable);
int EXP2DF __stdcall CncGetBlocDelete(void);
CNC_RC EXP2DF __stdcall CncEnableOptionalStop(int enable);
int EXP2DF __stdcall CncGetOptionalStop(void);
CNC_RC EXP2DF __stdcall CncSingleStepMode(int enable);
int EXP2DF __stdcall CncGetSingleStepMode(void);
CNC_RC EXP2DF __stdcall CncSetExtraJobOptions(char *extraLine, int doRepeat, unsigned int numberOfRepeats);
void EXP2DF   __stdcall CncGetExtraJobOptions(char *extraLine, int *doRepeat, unsigned int *numberOfRepeats);
CNC_RC EXP2DF __stdcall CncSetSimulationMode(int enable);
int EXP2DF __stdcall CncGetSimulationMode(void);
CNC_RC EXP2DF __stdcall CncSetFeedOverride(double factor);
CNC_RC EXP2DF __stdcall CncSetArcFeedOverride(double factor);
double EXP2DF __stdcall CncGetActualFeedOverride(void);
double EXP2DF __stdcall CncGetActualArcFeedOverride(void);
double EXP2DF __stdcall CncGetActualFeed(void);
CNC_RC EXP2DF __stdcall CncSetSpeedOverride(double factor);
double EXP2DF __stdcall CncGetActualSpeedOverride(void);
double EXP2DF __stdcall CncGetActualSpeed(void);
CNC_RC EXP2DF __stdcall CncFindFirstJobLine(char *text, int *endOfJob, int *totNumOfLines);
CNC_RC EXP2DF __stdcall CncFindFirstJobLineF(char *text, int *endOfJob);
CNC_RC EXP2DF __stdcall CncFindNextJobLine(char *text, int *endOfJob);
CNC_RC EXP2DF __stdcall CncFindNextJobLineF(char *text, int *endOfJob);
int EXP2DF __stdcall CncSwitchOnSpindleAndWaitUntilOn(CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
CNC_RC EXP2DF __stdcall CncPauseJob(void);
CNC_RC EXP2DF __stdcall CncPauseJob2(CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncPauseZSafe(void);
int EXP2DF __stdcall CncSyncPauseXSafe(void);
int EXP2DF __stdcall CncSyncPauseAxis(int axis, double feed);
int EXP2DF __stdcall CncSyncFromPauseAndStartAutomatic(double approachFeed, CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncSearchZSafe(CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncSearchXSafe(CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncSearchTool(CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncInchModeAndParametersAndOffset(CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncSearchAxis(int axis, double feed, CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
int EXP2DF __stdcall CncSyncFromSearchAndStartAutomatic(double approachFeed, CNC_KEEP_UI_ALIVE_FUNCTION pFunc, void *pFuncParameter);
CNC_RC EXP2DF __stdcall CncStartJog(double *axes,
                                    double velocityFactor,
                                    int continuous);
CNC_RC EXP2DF __stdcall CncStartJog2(int axis,
                                     double step,
                                     double velocityFactor,
                                     int continuous);
CNC_RC EXP2DF __stdcall CncStopJog(int axis);
CNC_RC EXP2DF __stdcall CncMoveTo(CNC_CART_DOUBLE pos, CNC_CART_BOOL move, double velocityFactor);
CNC_RC EXP2DF __stdcall CncStartPositionTracking(void);
CNC_RC EXP2DF __stdcall CncStartVelocityTracking(void);
CNC_RC EXP2DF __stdcall CncStartHandweelTracking(int axis, double vLimit, int handwheelID,
        int velMode,
        double multiplicationFactor,
        int handwheelCountsPerRevolution);
CNC_RC EXP2DF __stdcall CncSetTrackingPosition(CNC_CART_DOUBLE pos,
        CNC_CART_DOUBLE vel,
        CNC_CART_BOOL   move);
CNC_RC EXP2DF __stdcall CncSetTrackingPosition2(CNC_CART_DOUBLE pos,
        CNC_CART_DOUBLE vel,
        CNC_CART_DOUBLE acc,
        CNC_CART_BOOL move);
CNC_RC EXP2DF __stdcall CncSetTrackingVelocity(CNC_CART_DOUBLE vel,
        CNC_CART_BOOL   move);
CNC_RC EXP2DF __stdcall CncSetTrackingVelocity2(CNC_CART_DOUBLE vel,
        CNC_CART_DOUBLE acc,
        CNC_CART_BOOL axes);
CNC_RC EXP2DF __stdcall CncSetTrackingHandwheelCounter(int hw1Count, int hw2Count, int hw3Count);
CNC_RC EXP2DF __stdcall CncStartPlasmaTHCTracking(double pLimit,  double nLimit);
CNC_RC EXP2DF __stdcall CncSetPlasmaParameters(CNC_THC_PROCESS_PARAMETERS thcCfg);
CNC_THC_PROCESS_PARAMETERS EXP2DF * __stdcall CncGetPlasmaParameters(void);
CNC_RC EXP2DF __stdcall CncStopTracking(void);
CNC_RC EXP2DF __stdcall Cnc3DPrintCommand(CNC_3DPRINTING_COMMAND *pCmd);
char EXP2DF * __stdcall CncGetRCText(CNC_RC rc);
void EXP2DF __stdcall CncSendUserMessage(char *functionName, char *fileName, int lineNumber, CNC_ERROR_CLASS ec, CNC_RC rc, char *msg);
CNC_RC EXP2DF __stdcall CncSendToGUI(CNC_UIO_ACTIONS action, int value1, int value2);
CNC_RC EXP2DF __stdcall CncGetGUICommand(CNC_UIO_ACTIONS *pAction, int *pValue1, int *pValue2);