Netdll_EdingCnc - v4.3.52/Netdll_EdingCnc/cncapi/python/cncapi/cncfuncs.py


_mydll.CncGetInput.argtypes = [ c_int ]
_mydll.CncGetInput.restype = c_int

_mydll.CncGetInputRaw.argtypes = [ c_int ]
_mydll.CncGetInputRaw.restype = c_int

_mydll.CncGetGPIOInput.argtypes = [ c_int, c_int ]
_mydll.CncGetGPIOInput.restype = c_int

_mydll.CncSetOutput.argtypes = [ c_int, c_int ]
_mydll.CncSetOutput.restype = c_int

_mydll.CncSetOutputRaw.argtypes = [ c_int, c_int ]
_mydll.CncSetOutputRaw.restype = c_int

_mydll.CncSetGPIOOutput.argtypes = [ c_int, c_int, c_int ]
_mydll.CncSetGPIOOutput.restype = c_int

_mydll.CncCheckStartConditionOK.argtypes = [ c_int, c_int, POINTER(c_int) ]
_mydll.CncCheckStartConditionOK.restype = c_int

_mydll.CncSetSpindleOutput.argtypes = [ c_int, c_int, c_double ]
_mydll.CncSetSpindleOutput.restype = c_int

_mydll.CncLogFifoGet.argtypes = [ POINTER(CNC_LOG_MESSAGE) ]
_mydll.CncLogFifoGet.restype = c_int

_mydll.CncPosFifoGet.argtypes = [ POINTER(CNC_POS_FIFO_DATA) ]
_mydll.CncPosFifoGet.restype = c_int

_mydll.CncPosFifoGet2.argtypes = [ POINTER(CNC_POS_FIFO_DATA), POINTER(c_int) ]
_mydll.CncPosFifoGet2.restype = c_int

_mydll.CncGraphFifoGet.argtypes = [ POINTER(CNC_GRAPH_FIFO_DATA) ]
_mydll.CncGraphFifoGet.restype = c_int

_mydll.CncReset.argtypes = [  ]
_mydll.CncReset.restype = c_int

_mydll.CncReset2.argtypes = [ c_uint ]
_mydll.CncReset2.restype = c_int

_mydll.CncRunSingleLine.argtypes = [ c_char_p ]
_mydll.CncRunSingleLine.restype = c_int

_mydll.CncWaitSingleLine.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncWaitSingleLine.restype = c_int

_mydll.CncLoadJobW.argtypes = [ c_wchar_p ]
_mydll.CncLoadJobW.restype = c_int

_mydll.CncLoadJobA.argtypes = [ c_char_p ]
_mydll.CncLoadJobA.restype = c_int

_mydll.CncRunOrResumeJob.argtypes = [  ]
_mydll.CncRunOrResumeJob.restype = c_int

_mydll.CncStartRenderGraph.argtypes = [ c_int, c_int ]
_mydll.CncStartRenderGraph.restype = c_int

_mydll.CncStartRenderSearch.argtypes = [ c_int, c_int, c_int, c_int, c_int, c_int ]
_mydll.CncStartRenderSearch.restype = c_int

_mydll.CncRewindJob.argtypes = [  ]
_mydll.CncRewindJob.restype = c_int

_mydll.CncAbortJob.argtypes = [  ]
_mydll.CncAbortJob.restype = c_int

_mydll.CncSetJobArrayParameters.argtypes = [ POINTER(CNC_CMD_ARRAY_DATA) ]
_mydll.CncSetJobArrayParameters.restype = c_int

_mydll.CncGetJobArrayParameters.argtypes = [ POINTER(CNC_CMD_ARRAY_DATA) ]
_mydll.CncGetJobArrayParameters.restype = c_int

_mydll.CncGetJobMaterialSize.argtypes = [  ]
_mydll.CncGetJobMaterialSize.restype = CNC_VECTOR

_mydll.CncGetJobFiducual.argtypes = [ c_int, POINTER(CNC_FIDUCIAL_DATA) ]
_mydll.CncGetJobFiducual.restype = c_int

_mydll.CncEnableBlockDelete.argtypes = [ c_int ]
_mydll.CncEnableBlockDelete.restype = c_int

_mydll.CncGetBlocDelete.argtypes = [  ]
_mydll.CncGetBlocDelete.restype = c_int

_mydll.CncEnableOptionalStop.argtypes = [ c_int ]
_mydll.CncEnableOptionalStop.restype = c_int

_mydll.CncGetOptionalStop.argtypes = [  ]
_mydll.CncGetOptionalStop.restype = c_int

_mydll.CncSingleStepMode.argtypes = [ c_int ]
_mydll.CncSingleStepMode.restype = c_int

_mydll.CncGetSingleStepMode.argtypes = [  ]
_mydll.CncGetSingleStepMode.restype = c_int

_mydll.CncSetExtraJobOptions.argtypes = [ c_char_p, c_int, c_uint ]
_mydll.CncSetExtraJobOptions.restype = c_int

_mydll.CncGetExtraJobOptions.argtypes = [ c_char_p, POINTER(c_int), POINTER(c_uint) ]
_mydll.CncGetExtraJobOptions.restype = None

_mydll.CncSetSimulationMode.argtypes = [ c_int ]
_mydll.CncSetSimulationMode.restype = c_int

_mydll.CncGetSimulationMode.argtypes = [  ]
_mydll.CncGetSimulationMode.restype = c_int

_mydll.CncSetFeedOverride.argtypes = [ c_double ]
_mydll.CncSetFeedOverride.restype = c_int

_mydll.CncSetArcFeedOverride.argtypes = [ c_double ]
_mydll.CncSetArcFeedOverride.restype = c_int

_mydll.CncGetActualFeedOverride.argtypes = [  ]
_mydll.CncGetActualFeedOverride.restype = c_double

_mydll.CncGetActualArcFeedOverride.argtypes = [  ]
_mydll.CncGetActualArcFeedOverride.restype = c_double

_mydll.CncGetActualFeed.argtypes = [  ]
_mydll.CncGetActualFeed.restype = c_double

_mydll.CncSetSpeedOverride.argtypes = [ c_double ]
_mydll.CncSetSpeedOverride.restype = c_int

_mydll.CncGetActualSpeedOverride.argtypes = [  ]
_mydll.CncGetActualSpeedOverride.restype = c_double

_mydll.CncGetActualSpeed.argtypes = [  ]
_mydll.CncGetActualSpeed.restype = c_double

_mydll.CncFindFirstJobLine.argtypes = [ c_char_p, POINTER(c_int), POINTER(c_int) ]
_mydll.CncFindFirstJobLine.restype = c_int

_mydll.CncFindFirstJobLineF.argtypes = [ c_char_p, POINTER(c_int) ]
_mydll.CncFindFirstJobLineF.restype = c_int

_mydll.CncFindNextJobLine.argtypes = [ c_char_p, POINTER(c_int) ]
_mydll.CncFindNextJobLine.restype = c_int

_mydll.CncFindNextJobLineF.argtypes = [ c_char_p, POINTER(c_int) ]
_mydll.CncFindNextJobLineF.restype = c_int

_mydll.CncSwitchOnSpindleAndWaitUntilOn.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSwitchOnSpindleAndWaitUntilOn.restype = c_int

_mydll.CncPauseJob.argtypes = [  ]
_mydll.CncPauseJob.restype = c_int

_mydll.CncPauseJob2.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncPauseJob2.restype = c_int

_mydll.CncSyncPauseZSafe.argtypes = [  ]
_mydll.CncSyncPauseZSafe.restype = c_int

_mydll.CncSyncPauseXSafe.argtypes = [  ]
_mydll.CncSyncPauseXSafe.restype = c_int

_mydll.CncSyncPauseAxis.argtypes = [ c_int, c_double ]
_mydll.CncSyncPauseAxis.restype = c_int

_mydll.CncSyncFromPauseAndStartAutomatic.argtypes = [ c_double, CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncFromPauseAndStartAutomatic.restype = c_int

_mydll.CncSyncSearchZSafe.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncSearchZSafe.restype = c_int

_mydll.CncSyncSearchXSafe.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncSearchXSafe.restype = c_int

_mydll.CncSyncSearchTool.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncSearchTool.restype = c_int

_mydll.CncSyncInchModeAndParametersAndOffset.argtypes = [ CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncInchModeAndParametersAndOffset.restype = c_int

_mydll.CncSyncSearchAxis.argtypes = [ c_int, c_double, CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncSearchAxis.restype = c_int

_mydll.CncSyncFromSearchAndStartAutomatic.argtypes = [ c_double, CNC_KEEP_UI_ALIVE_FUNCTION, c_void_p ]
_mydll.CncSyncFromSearchAndStartAutomatic.restype = c_int

_mydll.CncStartJog.argtypes = [ POINTER(c_double), c_double, c_int ]
_mydll.CncStartJog.restype = c_int

_mydll.CncStartJog2.argtypes = [ c_int, c_double, c_double, c_int ]
_mydll.CncStartJog2.restype = c_int

_mydll.CncStopJog.argtypes = [ c_int ]
_mydll.CncStopJog.restype = c_int

_mydll.CncMoveTo.argtypes = [ CNC_CART_DOUBLE, CNC_CART_BOOL, c_double ]
_mydll.CncMoveTo.restype = c_int

_mydll.CncStartPositionTracking.argtypes = [  ]
_mydll.CncStartPositionTracking.restype = c_int

_mydll.CncStartVelocityTracking.argtypes = [  ]
_mydll.CncStartVelocityTracking.restype = c_int

_mydll.CncStartHandweelTracking.argtypes = [ c_int, c_double, c_int, c_int, c_double, c_int ]
_mydll.CncStartHandweelTracking.restype = c_int

_mydll.CncSetTrackingPosition.argtypes = [ CNC_CART_DOUBLE, CNC_CART_DOUBLE, CNC_CART_BOOL ]
_mydll.CncSetTrackingPosition.restype = c_int

_mydll.CncSetTrackingPosition2.argtypes = [ CNC_CART_DOUBLE, CNC_CART_DOUBLE, CNC_CART_DOUBLE, CNC_CART_BOOL ]
_mydll.CncSetTrackingPosition2.restype = c_int

_mydll.CncSetTrackingVelocity.argtypes = [ CNC_CART_DOUBLE, CNC_CART_BOOL ]
_mydll.CncSetTrackingVelocity.restype = c_int

_mydll.CncSetTrackingVelocity2.argtypes = [ CNC_CART_DOUBLE, CNC_CART_DOUBLE, CNC_CART_BOOL ]
_mydll.CncSetTrackingVelocity2.restype = c_int

_mydll.CncSetTrackingHandwheelCounter.argtypes = [ c_int, c_int, c_int ]
_mydll.CncSetTrackingHandwheelCounter.restype = c_int

_mydll.CncStartPlasmaTHCTracking.argtypes = [ c_double, c_double ]
_mydll.CncStartPlasmaTHCTracking.restype = c_int

_mydll.CncSetPlasmaParameters.argtypes = [ CNC_THC_PROCESS_PARAMETERS ]
_mydll.CncSetPlasmaParameters.restype = c_int

_mydll.CncGetPlasmaParameters.argtypes = [  ]
_mydll.CncGetPlasmaParameters.restype = POINTER(CNC_THC_PROCESS_PARAMETERS)

_mydll.CncStopTracking.argtypes = [  ]
_mydll.CncStopTracking.restype = c_int

_mydll.Cnc3DPrintCommand.argtypes = [ POINTER(CNC_3DPRINTING_COMMAND) ]
_mydll.Cnc3DPrintCommand.restype = c_int

_mydll.CncGetRCText.argtypes = [ c_int ]
_mydll.CncGetRCText.restype = c_char_p

_mydll.CncSendUserMessage.argtypes = [ c_char_p, c_char_p, c_int, c_int, c_int, c_char_p ]
_mydll.CncSendUserMessage.restype = None

_mydll.CncSendToGUI.argtypes = [ c_int, c_int, c_int ]
_mydll.CncSendToGUI.restype = c_int

_mydll.CncGetGUICommand.argtypes = [ POINTER(c_int), POINTER(c_int), POINTER(c_int) ]
_mydll.CncGetGUICommand.restype = c_int

def CncGetAPIVersion():
    c_version = create_string_buffer(CNC_MAX_NAME_LENGTH)
    _mydll.CncGetAPIVersion(c_version)
    return (CNC_RC_OK, c_version.value)

def CncGetServerVersion():
    c_version = create_string_buffer(CNC_MAX_NAME_LENGTH)
    retval = _mydll.CncGetServerVersion(c_version)
    return (retval, c_version.value)

def CncConnectServer(iniFileName):
    c_iniFileName = c_char_p()
    c_iniFileName.value = str.encode(iniFileName)
    retval = _mydll.CncConnectServer(c_iniFileName)
    return (retval)

def CncDisConnectServer():
    retval = _mydll.CncDisConnectServer()
    return (retval)

def CncGetSetupPassword():
    retval = _mydll.CncGetSetupPassword()
    return (retval)

def CncSetSetupPassword(newPassword):
    c_newPassword = c_char_p()
    c_newPassword.value = str.encode(newPassword)
    retval = _mydll.CncSetSetupPassword(c_newPassword)
    return (retval)

def CncGetSystemConfig():
    retval = _mydll.CncGetSystemConfig()
    return (retval.contents)

def CncGetInterpreterConfig():
    retval = _mydll.CncGetInterpreterConfig()
    return (retval.contents)

def CncGetSafetyConfig():
    retval = _mydll.CncGetSafetyConfig()
    return (retval.contents)

def CncGetTrafficLightConfig():
    retval = _mydll.CncGetTrafficLightConfig()
    return (retval.contents)

def CncGetProbingConfig():
    retval = _mydll.CncGetProbingConfig()
    return (retval.contents)

def CncGetIOConfig():
    retval = _mydll.CncGetIOConfig()
    return (retval.contents)

def CncGetGPIOConfig():
    retval = _mydll.CncGetGPIOConfig()
    return (retval.contents)

def CncGetJointConfig(joint):
    c_joint = c_int(joint)
    retval = _mydll.CncGetJointConfig(c_joint)
    return (retval.contents)

def CncGetSpindleConfig(spindle):
    c_spindle = c_int(spindle)
    retval = _mydll.CncGetSpindleConfig(c_spindle)
    return (retval.contents)

def CncGetFeedSpeedConfig():
    retval = _mydll.CncGetFeedSpeedConfig()
    return (retval.contents)

def CncGetHandwheelConfig():
    retval = _mydll.CncGetHandwheelConfig()
    return (retval.contents)

def CncGetTrajectoryConfig():
    retval = _mydll.CncGetTrajectoryConfig()
    return (retval.contents)

def CncGetKinConfig():
    retval = _mydll.CncGetKinConfig()
    return (retval.contents)

def CncGetUIConfig():
    retval = _mydll.CncGetUIConfig()
    return (retval.contents)

def CncGetCameraConfig():
    retval = _mydll.CncGetCameraConfig()
    return (retval.contents)

def CncGetTHCConfig():
    retval = _mydll.CncGetTHCConfig()
    return (retval.contents)

def CncGetServiceConfig():
    retval = _mydll.CncGetServiceConfig()
    return (retval.contents)

def CncGet3DPrintConfig():
    retval = _mydll.CncGet3DPrintConfig()
    return (retval.contents)

def CncGetUIOConfig():
    retval = _mydll.CncGetUIOConfig()
    return (retval.contents)

def CncGetVacuumConfig():
    retval = _mydll.CncGetVacuumConfig()
    return (retval.contents)

def CncGetIOStatus(ioID):
    c_ioID = c_int(ioID)
    retval = _mydll.CncGetIOStatus(c_ioID)
    return (retval.contents)
